sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:11: error: ')' expected but ';' found.
      if(plusPetit(i,i+ecart)){echange(i;i+ecart);i+=1;ok=false}
                                        ^AlgCombSort:11: error: ';' expected but ')' found.
      if(plusPetit(i,i+ecart)){echange(i;i+ecart);i+=1;ok=false}
                                                ^